# metareflect

./: .gitignore  LICENSE  LLVM_SETUP.md  README.md
example/: README.md  test.generated.hxx  test.hxx
metareflect/: main.cxx  metareflect.cxx  metareflect.hxx  metareflect_detail.hxx  metareflect_fundamental.hxx  metareflect_templates.hxx  test.cxx  test.generated.hxx  test.hxx
tooling/: CMakeLists.txt  annotations.hpp  classfinder.hpp  fieldgenerator.hpp  functiongenerator.hpp  reflect.cpp  reflectedclass.cpp  reflectedclass.hpp  utils.cpp  utils.hpp
